syntax = "proto3";
import "Protos/repository_with_branch_query.proto";

option csharp_namespace = "RepoAnalisys.Grpc";

package repository;

service TestsOperator {
  rpc VerifyProjectPassedTests (RepositoryWithBranchQuery) returns (TestsResponse);
}

message TestsResponse {
  int32 score = 1;
}